--- a/style/App.css
+++ b/style/App.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
 body{
   display: grid;
     place-items: center;
@@ -39,6 +40,11 @@ ul{
 a{
   text-decoration: none;
   color:black;
+  text-wrap: nowrap;
+}
+section{
+  display:grid;
+  place-items:center;
 }
 
 section:not(:first-child){
