--- a/style/Home.css
+++ b/style/Home.css
@@ -1,6 +1,7 @@
 .Hero-Home {
     display: flex;
     flex-direction: row;
+    justify-content: center;
     gap: 5.9rem;
     position: relative;
     flex-wrap: wrap;
