--- a/style/Info.css
+++ b/style/Info.css
@@ -16,7 +16,8 @@
 .info .highlight img {
     position: absolute;
     top: 0;
-    right: 34px;
+    right: -6%;
+    z-index: -1;
 }
 
 .info p:first-child::before {
@@ -38,7 +39,7 @@
 }
 
 .info h1 {
-    font-size: 5rem;
+    font-size: 4.4rem;
     margin: 0;
     display: flex;
     flex-direction: row;
