--- a/style/Footer.css
+++ b/style/Footer.css
@@ -9,7 +9,7 @@ footer{
     overflow: hidden;
 }
 footer .container{
-    width: 80%;
+    width: 81.25%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -18,7 +18,9 @@ footer .container{
 }
 footer .top{
     display: flex;
-    padding: 2rem 0;
+    padding-top: 80px;
+    padding-bottom: 60px;
+    gap: 79px;
     color: white;
     border-bottom: 1px solid white;
 }
@@ -31,24 +33,27 @@ footer .end{
 footer .top .info{
     display: flex;
     flex-direction: column;
-    width: 40%;
     gap: 1rem;
 
 }
 
 footer .top .info p{
 margin: 0;
+padding: 30px 0;
+color: #DCDCDC;
 }
 footer .top .navBrand a{
    display: flex;
    flex-direction: row;
    align-items:center;
+   padding: 0;
 }
 
-footer .top .navBrand a h1{
+footer .top .navBrand a h1 {
     margin: 0;
     font-size: 43px;
     color: white;
+    padding: 0;
 }
 
 footer .top .navBrand a span {
@@ -58,7 +63,6 @@ footer .top .navBrand a span {
 }
 footer .top .info p{
     font-size: 19px;
-    color: white;
 }
 
 footer .social-links{
@@ -74,8 +78,7 @@ font-size: large;
 footer .links{
     display: flex;
     justify-content: space-evenly;
-    width: 60%;
-    gap: 3rem;
+    gap: 60px;
 }
 
 footer .links .link{
@@ -89,15 +92,20 @@ font-size: 24px;
 margin: 0;
 }
 footer .links .link ul{
+    color: #DCDCDC;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     padding-inline-start: 0;
-    gap: 1rem;
+    gap: 10px;
+    padding: 0;
+    padding-top: 20px;
+    margin: 0;
 }
 
 footer .links .link ul li a{
-color: white;
+    font-size: 16px;
+    color: #DCDCDC;
 }
 
 footer .links .link:last-child ul li{
@@ -122,38 +130,24 @@ margin: 0;
         overflow: hidden;
     }
     footer .container{
-        width: 80%;
-        display: flex;
         flex-direction: column;
         align-items: center;
-        margin: 0;
-        padding: 0;
+
     }
     footer .top{
         display: flex;
         flex-direction: column;
         align-items: center;
-        padding: 2rem 0;
-        color: white;
-        border-bottom: 1px solid white;
     }
     footer .top .info .navBrand a h1 {
-        margin: 0;
-        font-size: 43px;
-        color: white;
         text-wrap: nowrap;
     }
     footer .top .info {
-        display: flex;
-        flex-direction: column;
         justify-content: center;
         align-items: center;
         width: 100%;
-        gap: 1rem;
-        padding: 1rem;
     }
     footer .top .info p {
-        font-size: 19px;
         color: white;
         text-align: center;
     }
@@ -163,8 +157,6 @@ margin: 0;
         justify-content: center;
         align-items: center;
         width: 100%;
-        gap: 3rem;
-        padding: 1rem;
     }
 
     footer .links .link {
