--- a/style/About.css
+++ b/style/About.css
@@ -8,8 +8,8 @@
     width: 100%;
     display: flex;
     flex-wrap: wrap;
-    gap: 10px;
-    justify-content: space-evenly;
+    gap: 16px;
+    justify-content: center;
     align-items: center;
 }
 
@@ -20,8 +20,8 @@
     align-items: center;
     text-align: center;
     border-radius: 10px;
-    width: 20%;
-    padding: 1.5rem 0;
+width: 270px;
+    padding: 52px 0;
 }
 
 .count div:nth-child(1) {
@@ -41,7 +41,7 @@
 }
 
 .count div p:nth-child(1) {
-    font-size: 50px;
+    font-size: 52px;
     margin: 0;
     font-weight: 500;
 }
@@ -49,6 +49,7 @@
 .count div p:nth-child(2) {
     font-size: 20px;
     font-weight: 500;
+    margin: 0;
 }
 
 /* Our Mission */
@@ -65,6 +66,9 @@
     width: 42%;
     display: grid;
     place-items: center;
+}
+.OurMission .info{
+    flex:1 1;
 }
 
 .OurMission .img img {
