--- a/style/Info.css
+++ b/style/Info.css
@@ -44,8 +44,9 @@
 
 .info p:not(:first-child) {
     font-size: 20px;
-
-    line-height:1.5;
+    line-height: 1.5;
+    margin: 0;
+    color: var(--text-ss-color);
 }
 
 @media (max-width: 1111px) {
