--- a/style/Blog.css
+++ b/style/Blog.css
@@ -14,11 +14,11 @@
 .blog-cards .card {
     width: 40%;
     padding: 1rem;
-    border-radius: 23px;
+    -o-border-radius: 23px;
     -webkit-border-radius: 23px;
     -moz-border-radius: 23px;
     -ms-border-radius: 23px;
-    -o-border-radius: 23px;
+    border-radius: 23px;
     display: flex;
     flex-direction: column;
     gap: 1rem;
@@ -37,11 +37,11 @@
     display: grid;
     place-items: center;
     padding: 2rem 0;
-    border-radius: 18px;
+    -o-border-radius: 18px;
     -webkit-border-radius: 18px;
     -moz-border-radius: 18px;
     -ms-border-radius: 18px;
-    -o-border-radius: 18px;
+    border-radius: 18px;
     background-color: white;
 }
 
@@ -64,14 +64,19 @@
     align-items: center;
 }
 
+.blog-cards .card p{
+    font-family: '__Space_Grotesk_587f35', '__Space_Grotesk_Fallback_587f35';
+    font-style: normal;
+
+}
 .blog-cards .card .content-card .first p:nth-child(1) {
     color: var(--text-s-color);
     background-color: white;
-    border-radius: 20px;
+    -o-border-radius: 20px;
     -webkit-border-radius: 20px;
     -moz-border-radius: 20px;
     -ms-border-radius: 20px;
-    -o-border-radius: 20px;
+    border-radius: 20px;
 
 
     padding: .5rem 1rem;
@@ -119,11 +124,11 @@
     .blog-cards .card {
         width: 87%;
         padding: 1rem;
-        border-radius: 23px;
+        -o-border-radius: 23px;
         -webkit-border-radius: 23px;
         -moz-border-radius: 23px;
         -ms-border-radius: 23px;
-        -o-border-radius: 23px;
+        border-radius: 23px;
         display: flex;
         flex-direction: column;
         text-align: center;
