--- a/style/Contact.css
+++ b/style/Contact.css
@@ -4,7 +4,6 @@
   flex-direction: row;
   align-items: center;
   flex-wrap: wrap;
-  gap: 20px;
   border-radius: 10px;
 }
 
@@ -14,29 +13,35 @@
 }
 
 .contact-page .get-quote .left {
-  width: 50%;
   display: flex;
   flex-direction: column;
-}
-
-.contact-page .get-quote .left .info {
-  width: 96%;
+  flex: 1 1 538px;
 }
 
 .contact-page .get-quote .left ul {
-  width: 85%;
   display: flex;
   padding: 0;
   flex-direction: column;
+  margin: 0;
 }
 
 .contact-page .get-quote .left ul li {
-  width: 100%;
   display: flex;
   padding: 0;
-  gap: 10px;
+  gap: 20px;
   align-items: baseline;
   color: var(--text-ss-color);
+}
+
+.contact-page .get-quote .left ul li p{
+  margin: 0;
+  padding-bottom: 20px;
+  font-size: 20px;
+}
+
+.contact-page .get-quote .left ul li:nth-child(1) p{
+  margin: 0;
+  padding-top: 40px;
 }
 
 .contact-page .get-quote .left ul li span {
@@ -46,18 +51,19 @@
 
 .contact-page form {
   background-color: hsl(187, 72%, 93%);
-  width: 42%;
   display: flex;
   flex-direction: row;
   gap: 20px;
   flex-wrap: wrap;
-  padding: 2rem;
+  padding: 20px;
+  padding-bottom: 60px;
   -o-border-radius: 20px;
   -webkit-border-radius: 20px;
   -moz-border-radius: 20px;
   -ms-border-radius: 20px;
-  border-radius: 20px;
+  border-radius: 30px;
   align-items: center;
+  flex: 1 1 calc(530px - 40px);
 }
 
 .contact-page .Blog-Home .top{
@@ -67,35 +73,34 @@
     flex-wrap: wrap;
     align-items:center;
 }
-.contact-page .links-contact {
-  padding-left: 1rem;
-}
 
 form div {
   display: flex;
   flex-direction: column;
   gap: 10px;
-  width: 47%;
+  flex: 1 1 calc(50% - 10px);
 }
 
 form div input,
 textarea {
   padding: 1rem 1rem;
-  -o-border-radius: 10px;
-  -webkit-border-radius: 20px;
-  -moz-border-radius: 10px;
-  -ms-border-radius: 10px;
-  border-radius: 10px;
+  border-radius: 100px;
   outline: none;
   caret-color: var(--text-ss-color);
   color: var(--text-ss-color);
   border-color: transparent;
 }
 
+textarea {
+  border-radius: 12px;
+}
+
 form div input::placeholder,
 textarea::placeholder {
 
   color: #b5b5b5;
+  font-family: '__Space_Grotesk_587f35', '__Space_Grotesk_Fallback_587f35';
+    font-style: normal;
 
 }
 
@@ -106,6 +111,8 @@ form div label {
   gap: 5px;
   color: var(--text-s-color);
   font-weight: 700;
+  padding-top: 8px;
+  font-size: 16px;
 }
 
 form div label span {
